Shader works, but orientation is a bit broken and there's a problem with performance

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 - make more accurate limit for number of videos
-- roll in shader
+- make shader have different x and y scale
+- fix orientation
 - tidy up chain
-- 
