--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 - make more accurate limit for number of videos
-- make shader have different x and y scale
 - fix orientation
 - tidy up chain
+- add the artwork
